objects/Account_Contact__c.object
<CustomObject>
    <description>Junction object linking a Contact record to an Account record.  Used so a contact can have many accounts without duplicating the contact information</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Lookup to Account object Contact is linked to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Lookup to Contact linking it to an Account</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSG_Account_Id__c</fullName>
        <description>Account Id from the PSG Org</description>
        <externalId>true</externalId>
        <label>PSG Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Contact_Id__c</fullName>
        <description>The Salesforce Contact Id from the PSG Salesforce Org.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the Salesforce Contact.Id field field from the PSG Salesforce Org</inlineHelpText>
        <label>PSG Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Content_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if contact is primary content contact for hotel</description>
        <label>Primary Content Contact</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Account Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>